<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CFSS</string>
    <string name="login_username_hint">请输入帐号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_version">版本号:v1.0</string>


    <string name="net_title">功能选择</string>
    <string name="net_button_in">网点入库</string>
    <string name="net_button_out">网点出库</string>

    <string name="main_title">网点入库任务列表</string>
    <string name="main_title_username">张三</string>
    <string name="main_title_startdate">任务开始时间：2014/12/20 18:00</string>
    <string name="main_title_enddate">任务结束时间：2014/12/21 06:00</string>


    <string name="detail_title">请先"连接设备"</string>
    <string name="detail_person1">押运人员：</string>
    <string name="detail_person2">网点人员：</string>
    <string name="detail_branch_name">网点名称</string>
    <string name="detail_branch_address">网点地址</string>
    <string name="detail_branch_contact">网点联系人</string>
    <string name="detail_branch_tel">联系人电话</string>
    <string name="detail_check_user">巡检员</string>
    <string name="detail_check_time">巡检时间</string>
    <string name="detail_remark_hint">备注信息</string>
    <string name="detail_position">位置</string>
    <string name="detail_position_value">广州市天河区平云路</string>
    <string name="sdcard_unfound">未找到存储卡，无法存储照片！</string>


    <string name="button_operate_1">巡检正常</string>
    <string name="button_operate_2">确认交接</string>
    <string name="button_operate_3">连接设备</string>
    <string name="button_operate_4">启动扫描</string>
    <string name="button_back">返回</string>
    <string name="button_commit">提交</string>
    <string name="button_QRScan">二维码扫描</string>
    <string name="aim_qrcode">请对准想要识别的二维码</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="data_commot">保存信息</string>


    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="opticol">Opticol</string>
    <string name="symbol">Symbol</string>
    <string name="honyware">Honyware</string>
    <string name="se4500">Se4500</string>
    <string name="title_activity_main">Scanner</string>
    <string name="set_scanner_manager">Set Continuous Mode</string>
    <string name="scanner">Scan</string>
    <string name="start">Start Scan</string>
    <string name="close">Stop Scan</string>
    <string name="scanner_on">Turn on scanner power</string>
    <string name="scanner_off">Turn off scanner power</string>
    <string name="scanner_keyboard_mode">Keyboard mode</string>
    <string name="scanner_keyboard_output">Keyboard output</string>
    <string name="scanner_keyboard_output_summary">Keyboard output scan results to focus the edit box</string>
    <string name="scanner_beep">Sounds</string>
    <string name="scanner_beep_summary">Play sound when the scan is successful</string>
    <string name="scanner_vibrate">Vibrate</string>
    <string name="scanner_vibrate_summary">Vibrate when the scan is successful</string>
    <string name="scanner_enter">Additional enter key</string>
    <string name="scanner_enter_summary">Additional enter key after the scan results</string>
    <string name="scanner_lock">Scan key</string>
    <string name="scanner_lock_on">Enable Scan key</string>
    <string name="scanner_lock_off">Disable Scan key</string>
    <string name="scanner_reset_def">Reset Scanner</string>
    <string name="scanner_reset_def_summary">Reset the scanner device</string>
    <string name="scanner_toast">Scanner reset finished!</string>
    <string name="scanner_hint">At the barcode and press the scan button on the device for bar code</string>
    <!-- 人行端交接页面 -->
    <string name="handover_PBC_handover">人行端交接</string>
    <string name="handover_PBC_staff">人行人员：</string>
    <string name="handover_Bank_staff">银行人员：</string>
    <string name="handover_add_staff">添加人员</string>
    <string name="handover_scan_peixiang">扫描配箱</string>
    <string name="handover_commit_data">上传数据</string>
    <!-- 清分场地交接页面-->
    <string name="handover_YinYan_handover">交接页面</string>
    <string name="handover_YinYan_staff">银雁人员：</string>
    <string name="handover_YinYan_scanBox">扫描交接款箱</string>
    <string name="title_activity_container_handover">ContainerHandoverActivity</string>
</resources>
