<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/logn"
    android:padding="20dip" >

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username_edit"
            style="@style/normalText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_draw_bg"
            android:drawableLeft="@drawable/icon_man"
            android:drawablePadding="10dp"
            android:hint="@string/login_username_hint"
            android:textColorHint="@color/grey"
            android:inputType="textCapCharacters"
            android:paddingLeft="10dip"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password_edit"
            style="@style/normalText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_draw_bg"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="10dp"
            android:hint="@string/login_password_hint"
            android:textColorHint="@color/grey"
            android:inputType="numberPassword"
            android:paddingLeft="10dip"
            android:maxLines="1"/>

        <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="5dip"
            android:checked="false"
            android:button="@drawable/checkselect_draw_bg"
            android:paddingLeft="15dip"
            android:text="@string/login_remember_password"
            android:textColor="@color/grey" >
        </CheckBox>
    </LinearLayout>

    <ImageView
        android:id="@+id/miniTwitter_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/content_layout"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="30dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <!-- 登录button -->

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_layout"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="#25A0F7"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/login_label_signin" />
    
     <TextView
        android:id="@+id/detail_branch_name"
        style="@style/valueText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="10dp"
        android:textSize="14sp" 
        android:text="@string/login_label_version"/>

</RelativeLayout>