<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#3695E2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/net_sysout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3695E2"
            android:text="退出系统"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView1"
            style="@style/titleBarText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/net_title" />

        <!--<ImageView-->
            <!--android:id="@+id/net_sysout_view"-->
            <!--android:layout_width="78dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="18dp"-->
            <!--android:layout_toRightOf="@+id/textView1"-->
            <!--android:contentDescription="@string/app_name"-->
            <!--android:src="@drawable/out" />-->

    </RelativeLayout>

    <TextView
        android:id="@+id/peixiangdetail_tv_num"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/peixiangdetail_tv_name"
        android:layout_alignBottom="@+id/peixiangdetail_tv_name"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:padding="10dp" />

    <TextView
        android:id="@+id/peixiangdetail_tv_name"
        style="@style/timesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/peixiang_button"
        android:layout_below="@+id/peixiang_button"
        android:gravity="center"
        android:padding="10dp" />

    <Button
        android:id="@+id/peixiang_button"
        style="@style/buttonText"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/title_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#FB7F2C"
        android:text="@string/net_button_in" />

    <Button
        android:id="@+id/net_out_button"
        style="@style/buttonText"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/peixiangdetail_tv_name"
        android:layout_below="@+id/peixiangdetail_tv_name"
        android:background="#FB7F2C"
        android:text="@string/net_button_out" />

</RelativeLayout>